# faultdetection-epuckswarm

./: .gitignore  CMakeLists.txt  README  convert_argos_pngs_to_mp4.bash  generate_files.sh  how_to.md  run_script.sh
OneDrive_2023-04-26/Final Data (with Original Indices)/: analyze.py  process.bash  processed_data_1000.json  processed_data_1001.json  processed_data_1002.json  processed_data_1003.json  processed_data_1004.json  processed_data_1005.json  processed_data_1006.json  processed_data_1007.json  processed_data_1008.json  processed_data_1009.json  processed_data_1010.json  processed_data_1011.json  processed_data_1012.json  processed_data_1013.json  processed_data_1014.json  processed_data_1015.json  processed_data_1016.json  processed_data_1017.json  processed_data_1018.json  processed_data_1019.json  processed_data_1020.json  processed_data_1021.json  processed_data_1022.json  processed_data_1023.json  processed_data_1024.json  processed_data_1025.json  processed_data_1026.json  processed_data_1027.json  processed_data_1028.json  processed_data_1029.json  processed_data_1030.json  processed_data_1031.json  processed_data_1032.json  processed_data_1033.json  processed_data_1034.json  processed_data_1035.json
analysis/: analyze_human_experiments.py  analyze_output.py
controllers/epuck_foraging/: epuck_foraging.cpp  epuck_foraging.h
controllers/epuck_hom_swarm/: epuck_hom_swarm.h
data/cameron_data/: data_seed_6.txt  data_seed_7.txt  data_seed_8.txt
experiments/: epuck_foraging.argos  epuck_hom_swarm.argos  generate_experiments.py
experiments/cameron_experiments/: epuck_foraging_16_seed_6.argos  epuck_foraging_16_seed_7.argos  epuck_foraging_16_seed_8.argos  epuck_foraging_64_seed_10.argos  epuck_foraging_64_seed_11.argos  epuck_foraging_64_seed_9.argos
experiments/fault_scale/: generate.bash  run.bash
experiments/scale/: epuck_foraging_16.argos  epuck_foraging_64.argos
loop_functions/foraging_loop_functions/: foraging_loop_functions.cpp  foraging_loop_functions.h
